# appstore-light

./: .gitignore  Cargo.toml  README.md  flake.nix  package.json
crates/appstore_types/: Cargo.toml
crates/appstore_types/src/: lib.rs
crates/hc_utils/: Cargo.toml
crates/hc_utils/src/: lib.rs
crates/mere_memory_types/: Cargo.toml
dnas/appstore/workdir/: appstore.dna  dna.yaml
dnas/appstore/zomes/coordinator/appstore_api/: Cargo.toml
dnas/appstore/zomes/coordinator/appstore_api/src/: app.rs  lib.rs  publisher.rs
dnas/appstore/zomes/coordinator/mere_memory_api/: Cargo.toml
dnas/appstore/zomes/integrity/appstore/: Cargo.toml
dnas/appstore/zomes/integrity/appstore/src/: errors.rs  lib.rs  validation.rs
dnas/appstore/zomes/integrity/mere_memory/: Cargo.toml
dnas/portal/workdir/: portal.dna
workdir/: happ.yaml
