[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "crates/*"]
resolver = "2"


[profile.dev]
opt-level = "z"


[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true

[workspace.dependencies]
essence_payloads = "0.1"
hdi = "0.3.3"
hdk = "0.2.3"
hc_crud_caps = { git = "https://github.com/matthme/rust-hc-crud-caps", branch = "holochain-0.2.3-beta-rc.1" }
hc_portal_types = { git = "https://github.com/matthme/portal-dna", branch = "holochain-0.2.3-beta-rc.1" }
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
serde_yaml = "0.8.17"
sha2 = "0"
thiserror = "1"


