[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "crates/*"]
resolver = "2"


[profile.dev]
opt-level = "z"


[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true

[workspace.dependencies]
essence_payloads = "0.1"
hdi = { version = "0.4.0-beta-dev.30" }
hdk = { version = "0.3.0-beta-dev.34" }
hc_crud_caps = "0.12.0"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
serde_yaml = "0.8.17"
sha2 = "0"
thiserror = "1"


