[package]
name = "hc_utils"
version = "0.9.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "hc_utils"
crate-type = ["cdylib", "rlib"]

[dependencies]
essence_payloads = { workspace = true }
hc_crud_caps = { workspace = true }
hdi = { workspace = true }
hdk = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
