[package]
name = "appstore"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "appstore"
crate-type = ["cdylib", "rlib"]

[dependencies]
appstore_types = { path = "../../../../../crates/appstore_types"}
essence_payloads = "0.1"
hc_crud_caps = { workspace = true }
hc_utils = {path = "../../../../../crates/hc_utils"}
hdi = { workspace = true }
hdk = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = "1"
